# FlowZint_sales_agentic_ai

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: config.py  debug_logger.py  main.py  pyproject.toml  requirements.txt
backend/agents/: approval_detection.py  approval_tracking.py  communication.py  delay_intelligence.py  document_generation.py  learning.py  orchestrator.py
backend/behavioral_twins/: seed_data.py  twin_store.py
backend/checkpoints/: .gitkeep
backend/db/: database.py
backend/graphs/: __init__.py  builder.py  routing.py
backend/integrations/: crm_mock.py  email_client.py  llm_client.py  slack_client.py
backend/memory/: behavioral_twin_store.py  checkpointer.py  long_term_store.py
backend/models/: approval.py  behavioral_twin.py  deal.py  deal_job.py  learning_log.py
backend/nodes/: __init__.py  _llm_factory.py  _node_utils.py  approval_detection.py  approval_persistence.py  approval_tracking.py  behavioral_twin_retrieval.py  communication_planner.py  delay_intelligence.py  document_generator.py  human_review.py  learning.py  rejection_handler.py
backend/observability/: execution_history.py  graph_metrics.py  langsmith.py  trace_logger.py
backend/routes/: approvals.py  dashboard.py  deals.py  webhooks.py
backend/schemas/: graph_state.py  structured_outputs.py
backend/services/: __init__.py  background_runner.py  deal_service.py
backend/tests/: conftest.py  test_sanity.py
backend/tools/: __init__.py  behavioral_twin_tool.py  crm_tool.py  database_tool.py  email_tool.py  learning_tool.py  momentum_tool.py  (+1 more)
(+97 files in other folders)
