[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "anthropic>=0.34,<1.0",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph==1.2.7",
    "langgraph-checkpoint-sqlite==3.1.0",
    "langsmith>=0.3.0",
    "pydantic==2.9.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.35",
    "tenacity>=8.5,<9.0.0",
    "uvicorn[standard]==0.30.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
